@@ -6,7 +6,6 @@
  */
 package org.appcelerator.titanium.view;
 
-
 import java.lang.ref.WeakReference;
 import java.lang.reflect.InvocationTargetException;
 import java.lang.reflect.Method;
@@ -32,8 +31,10 @@ import org.appcelerator.titanium.util.TiUIHelper;
 import org.appcelerator.titanium.view.TiCompositeLayout.LayoutParams;
 import org.appcelerator.titanium.view.TiGradientDrawable.GradientType;
 
+import android.app.Activity;
 import android.content.Context;
 import android.graphics.Paint;
+import android.graphics.Point;
 import android.graphics.Rect;
 import android.graphics.drawable.Drawable;
 import android.os.Build;
@@ -51,6 +52,7 @@ import android.view.View.OnKeyListener;
 import android.view.View.OnLongClickListener;
 import android.view.View.OnTouchListener;
 import android.view.ViewGroup;
+import android.view.ViewParent;
 import android.view.animation.Animation;
 import android.view.animation.AnimationSet;
 import android.view.inputmethod.InputMethodManager;
@@ -90,10 +92,13 @@ public abstract class TiUIView
 	// rather than starting the next animation always from scale 1.0f (i.e., normal scale).
 	// This gives us parity with iPhone for scale animations that use the 2-argument variant
 	// of Ti2DMatrix.scale().
-	private Pair<Float, Float> animatedScaleValues = Pair.create(new Float(1f), new Float(1f)); // default = full size (1f)
+	private Pair<Float, Float> animatedScaleValues = Pair.create(Float.valueOf(1f), Float.valueOf(1f)); // default = full size (1f)
 
 	// Same for rotation animation.
 	private float animatedRotationDegrees = 0f; // i.e., no rotation.
+
+	// Same for translate animation.
+	private Pair<Integer, Integer> animatedXYTranslationValues = Pair.create(Integer.valueOf(0), Integer.valueOf(0));
 
 	private KrollDict lastUpEvent = new KrollDict(2);
 	// In the case of heavy-weight windows, the "nativeView" is null,
@@ -104,6 +109,7 @@ public abstract class TiUIView
 	private Method mSetLayerTypeMethod = null; // Honeycomb, for turning off hw acceleration.
 
 	private boolean zIndexChanged = false;
+	private TiBorderWrapperView borderView;
 
 	/**
 	 * Constructs a TiUIView object with the associated proxy.
@@ -127,7 +133,7 @@ public abstract class TiUIView
 	public void add(TiUIView child)
 	{
 		if (child != null) {
-			View cv = child.getNativeView();
+			View cv = child.getOuterView();
 			if (cv != null) {
 				View nv = getNativeView();
 				if (nv instanceof ViewGroup) {
@@ -148,7 +154,7 @@ public abstract class TiUIView
 	public void remove(TiUIView child)
 	{
 		if (child != null) {
-			View cv = child.getNativeView();
+			View cv = child.getOuterView();
 			if (cv != null) {
 				View nv = getNativeView();
 				if (nv instanceof ViewGroup) {
@@ -245,15 +251,64 @@ public abstract class TiUIView
 	 */
 	public void animate()
 	{
-		TiAnimationBuilder builder = proxy.getPendingAnimation();
-		if (builder != null && nativeView != null) {
-			AnimationSet as = builder.render(proxy, nativeView);
-			if (DBG) {
-				Log.d(LCAT, "starting animation: "+as);
+		if (nativeView == null) {
+			return;
+		}
+
+		// Pre-honeycomb, if one animation clobbers another you get a problem whereby the background of the
+		// animated view's parent (or the grandparent) bleeds through.  It seems to improve if you cancel and clear
+		// the older animation.  So here we cancel and clear, then re-queue the desired animation.
+		if (Build.VERSION.SDK_INT < TiC.API_LEVEL_HONEYCOMB) {
+			Animation currentAnimation = nativeView.getAnimation();
+			if (currentAnimation != null && currentAnimation.hasStarted() && !currentAnimation.hasEnded()) {
+				// Cancel existing animation and
+				// re-queue desired animation.
+				currentAnimation.cancel();
+				nativeView.clearAnimation();
+				proxy.handlePendingAnimation(true);
+				return;
 			}
-			nativeView.startAnimation(as);
-			// Clean up proxy
-			proxy.clearAnimation(builder);
+
+		}
+
+		TiAnimationBuilder builder = proxy.getPendingAnimation();
+		if (builder == null) {
+			return;
+		}
+
+		proxy.clearAnimation(builder);
+		AnimationSet as = builder.render(proxy, nativeView);
+
+		// If a view is "visible" but not currently seen (such as because it's covered or
+		// its position is currently set to be fully outside its parent's region),
+		// then Android might not animate it immediately because by default it animates
+		// "on first frame" and apparently "first frame" won't happen right away if the
+		// view has no visible rectangle on screen.  In that case invalidate its parent, which will
+		// kick off the pending animation.
+		boolean invalidateParent = false;
+		ViewParent viewParent = nativeView.getParent();
+
+		if (nativeView.getVisibility() == View.VISIBLE && viewParent instanceof View) {
+			int width = nativeView.getWidth();
+			int height = nativeView.getHeight();
+
+			if (width == 0 || height == 0) {
+				// Could be animating from nothing to something
+				invalidateParent = true;
+			} else {
+				Rect r = new Rect(0, 0, width, height);
+				Point p = new Point(0, 0);
+				invalidateParent = !(viewParent.getChildVisibleRect(nativeView, r, p));
+			}
+		}
+
+		if (DBG) {
+			Log.d(LCAT, "starting animation: " + as);
+		}
+		nativeView.startAnimation(as);
+
+		if (invalidateParent) {
+			((View) viewParent).postInvalidate();
 		}
 	}
 
@@ -408,12 +463,16 @@ public abstract class TiUIView
 		} else if (key.equals(TiC.PROPERTY_HEIGHT)) {
 			resetPostAnimationValues();
 			if (newValue != null) {
-				if (!newValue.equals(TiC.SIZE_AUTO)) {
-					layoutParams.optionHeight = TiConvert.toTiDimension(TiConvert.toString(newValue), TiDimension.TYPE_HEIGHT);
+				layoutParams.optionHeight = null;
+				layoutParams.sizeOrFillHeightEnabled = true;
+				if (newValue.equals(TiC.LAYOUT_SIZE)) {
+					layoutParams.autoFillsHeight = false;
+				} else if (newValue.equals(TiC.LAYOUT_FILL)) {
+					layoutParams.autoFillsHeight = true;
+				} else if (!newValue.equals(TiC.SIZE_AUTO)) {
+					layoutParams.optionHeight = TiConvert.toTiDimension(TiConvert.toString(newValue),
+						TiDimension.TYPE_HEIGHT);
 					layoutParams.sizeOrFillHeightEnabled = false;
-				} else {
-					layoutParams.optionHeight = null;
-					layoutParams.sizeOrFillHeightEnabled = true;
 				}
 			} else {
 				layoutParams.optionHeight = null;
@@ -427,12 +486,15 @@ public abstract class TiUIView
 		} else if (key.equals(TiC.PROPERTY_WIDTH)) {
 			resetPostAnimationValues();
 			if (newValue != null) {
-				if (!newValue.equals(TiC.SIZE_AUTO)) {
+				layoutParams.optionWidth = null;
+				layoutParams.sizeOrFillWidthEnabled = true;
+				if (newValue.equals(TiC.LAYOUT_SIZE)) {
+					layoutParams.autoFillsWidth = false;
+				} else if (newValue.equals(TiC.LAYOUT_FILL)) {
+					layoutParams.autoFillsWidth = true;
+				} else if (!newValue.equals(TiC.SIZE_AUTO)) {
 					layoutParams.optionWidth = TiConvert.toTiDimension(TiConvert.toString(newValue), TiDimension.TYPE_WIDTH);
 					layoutParams.sizeOrFillWidthEnabled = false;
-				} else {
-					layoutParams.optionWidth = null;
-					layoutParams.sizeOrFillWidthEnabled = true;
 				}
 			} else {
 				layoutParams.optionWidth = null;
@@ -529,8 +591,13 @@ public abstract class TiUIView
 				}
 
 				if (hasBorder) {
-					if (newBackground) {
+					if (borderView == null && parent != null) {
+						// Since we have to create a new border wrapper view, we need to remove this view, and re-add it.
+						// This will ensure the border wrapper view is added correctly.
+						TiUIView parentView = parent.getOrCreateView();
+						parentView.remove(this);
 						initializeBorder(d, bgColor);
+						parentView.add(this);
 					} else if (key.startsWith(TiC.PROPERTY_BORDER_PREFIX)) {
 						handleBorderProperty(key, newValue);
 					}
@@ -854,66 +921,61 @@ public abstract class TiUIView
 
 	private void initializeBorder(KrollDict d, Integer bgColor)
 	{
-		if (d.containsKey(TiC.PROPERTY_BORDER_RADIUS)
-			|| d.containsKey(TiC.PROPERTY_BORDER_COLOR)
-			|| d.containsKey(TiC.PROPERTY_BORDER_WIDTH)) {
+		if (hasBorder(d)) {
 
 			if(nativeView != null) {
-				if (background == null) {
-					applyCustomBackground();
-				}
 
-				if (background.getBorder() == null) {
-					background.setBorder(new TiBackgroundDrawable.Border());
-				}
+				if (borderView == null) {
+					Activity currentActivity = proxy.getActivity();
+					if (currentActivity == null) {
+						currentActivity = TiApplication.getAppCurrentActivity();
+					}
+					borderView = new TiBorderWrapperView(currentActivity);
 
-				TiBackgroundDrawable.Border border = background.getBorder();
+					// Create new layout params for the child view since we just want the
+					// wrapper to control the layout
+					LayoutParams params = new LayoutParams();
+					params.height = android.widget.FrameLayout.LayoutParams.MATCH_PARENT;
+					params.width = android.widget.FrameLayout.LayoutParams.MATCH_PARENT;
+					borderView.addView(nativeView, params);
+				}
 
 				if (d.containsKey(TiC.PROPERTY_BORDER_RADIUS)) {
 					float radius = TiConvert.toFloat(d, TiC.PROPERTY_BORDER_RADIUS, 0f);
 					if (radius > 0f && HONEYCOMB_OR_GREATER) {
 						disableHWAcceleration();
 					}
-					border.setRadius(radius);
+					borderView.setRadius(radius);
 				}
 				if (d.containsKey(TiC.PROPERTY_BORDER_COLOR) || d.containsKey(TiC.PROPERTY_BORDER_WIDTH)) {
 					if (d.containsKey(TiC.PROPERTY_BORDER_COLOR)) {
-						border.setColor(TiConvert.toColor(d, TiC.PROPERTY_BORDER_COLOR));
+						borderView.setColor(TiConvert.toColor(d, TiC.PROPERTY_BORDER_COLOR));
 					} else {
 						if (bgColor != null) {
-							border.setColor(bgColor);
+							borderView.setColor(bgColor);
 						}
 					}
 					if (d.containsKey(TiC.PROPERTY_BORDER_WIDTH)) {
-						border.setWidth(TiConvert.toFloat(d, TiC.PROPERTY_BORDER_WIDTH, 0f));
+						borderView.setBorderWidth(TiConvert.toFloat(d, TiC.PROPERTY_BORDER_WIDTH, 0f));
 					}
 				}
-				//applyCustomBackground();
 			}
 		}
 	}
 
 	private void handleBorderProperty(String property, Object value)
 	{
-		if (background.getBorder() == null) {
-			background.setBorder(new TiBackgroundDrawable.Border());
-		}
-		TiBackgroundDrawable.Border border = background.getBorder();
-
-		if (property.equals(TiC.PROPERTY_BORDER_COLOR)) {
-			border.setColor(TiConvert.toColor(value.toString()));
-		} else if (property.equals(TiC.PROPERTY_BORDER_RADIUS)) {
+		if (TiC.PROPERTY_BORDER_COLOR.equals(property)) {
+			borderView.setColor(TiConvert.toColor(value.toString()));
+		} else if (TiC.PROPERTY_BORDER_RADIUS.equals(property)) {
 			float radius = TiConvert.toFloat(value, 0f);
 			if (radius > 0f && HONEYCOMB_OR_GREATER) {
 				disableHWAcceleration();
 			}
-			border.setRadius(radius);
-		} else if (property.equals(TiC.PROPERTY_BORDER_WIDTH)) {
-			border.setWidth(TiConvert.toFloat(value, 0f));
+			borderView.setRadius(radius);
+		} else if (TiC.PROPERTY_BORDER_WIDTH.equals(property)) {
+			borderView.setBorderWidth(TiConvert.toFloat(value, 0f));
 		}
-		//recalculate bounds since border is changed.
-		background.onBoundsChange(background.getBounds());
-		applyCustomBackground();
 	}
 
 	private static HashMap<Integer, String> motionEvents = new HashMap<Integer,String>();
@@ -953,6 +1015,14 @@ public abstract class TiUIView
 	protected boolean allowRegisterForTouch()
 	{
 		return true;
+	}
+
+	public View getOuterView()
+	{
+		if (borderView == null) {
+			return nativeView;
+		}
+		return borderView;
 	}
 
 	public void registerForTouch()
@@ -1144,7 +1214,6 @@ public abstract class TiUIView
 		}
 	}
 
-	
 	public void clearOpacity(View view)
 	{
 		Drawable d = view.getBackground();
@@ -1295,7 +1364,6 @@ public abstract class TiUIView
 	/**
 	 * Store the animated x and y scale values (i.e., the scale after an animation)
 	 * since Android provides no property for looking them up.
-	 * looking it up.
 	 */
 	public void setAnimatedScaleValues(Pair<Float, Float> newValues)
 	{
@@ -1320,11 +1388,31 @@ public abstract class TiUIView
 	}
 
 	/**
+	 * Retrieve the saved translate animation x & y deltas, which we store here since Android provides no property
+	 * for looking them up.
+	 */
+	public Pair<Integer, Integer> getAnimatedXYTranslationValues()
+	{
+		return animatedXYTranslationValues;
+	}
+
+	/**
+	 * Store the translate animation x and y delta values
+	 * since Android provides no property for looking them up.
+	 */
+	public void setAnimatedXYTranslationValues(Pair<Integer, Integer> newValues)
+	{
+		animatedXYTranslationValues = newValues;
+	}
+
+	/**
 	 * "Forget" the values we save after scale and rotation animations.
 	 */
 	private void resetPostAnimationValues()
 	{
 		animatedRotationDegrees = 0f; // i.e., no rotation.
 		animatedScaleValues = Pair.create(Float.valueOf(1f), Float.valueOf(1f)); // 1 means no scaling
+		animatedXYTranslationValues = Pair.create(Integer.valueOf(0), Integer.valueOf(0));
 	}
+
 }
